Добавлен метод для склеивания несколькиз html в один pdf файл Доработан swagger
