# app/controllers/cdn/pdf_controller.rb
@@ -14,5 +14,22 @@ module Cdn
         send_file(tmpname)
       end
     end
+
+    def many_html_to_pdf
+      options_array = many_pdf_params!
+      result_pdf = CombinePDF.new
+      options_array.each do |options|
+        pdf = build_pdf(options.decorate.as_json.deep_symbolize_keys)
+        ::Dir::Tmpname.create(%w[html .pdf]) do |tmpname|
+          File.open(tmpname, 'wb') { |file| file.write(pdf) }
+          result_pdf << CombinePDF.load(tmpname)
+        end
+      end
+
+      ::Dir::Tmpname.create(%w[result .pdf]) do |tmpname|
+        result_pdf.save(tmpname)
+        send_file(tmpname)
+      end
+    end
   end
 end
